--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# things i think shouldn't be here
 .env
+main
+*.zip
